@@ -2,13 +2,12 @@ package com.xiyu.bid.integration.organization.domain.policy;
 
 import com.xiyu.bid.integration.organization.dto.OssMenuTreeNode;
 
-import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 
 /**
@@ -18,16 +17,16 @@ import java.util.Set;
  * <ol>
  *   <li>递归遍历所有节点（含 children）</li>
  *   <li>对 OSS menuCode 规范化：trim + 转小写</li>
- *   <li>优先使用配置映射表查找内部权限码（大小写不敏感）</li>
+ *   <li>优先使用配置映射表查找内部权限码列表（大小写不敏感）</li>
  *   <li>未命中时按默认行为处理：IGNORE 忽略，USE_NORMALIZED_CODE 使用规范化编码</li>
  * </ol>
  */
 public class OssMenuPermissionMapper {
 
-    private final Map<String, String> codeMappings;
+    private final Map<String, List<String>> codeMappings;
     private final UnmappedBehavior unmappedBehavior;
 
-    public OssMenuPermissionMapper(Map<String, String> codeMappings, String unmappedBehavior) {
+    public OssMenuPermissionMapper(Map<String, List<String>> codeMappings, String unmappedBehavior) {
         this.codeMappings = normalizeKeys(codeMappings);
         this.unmappedBehavior = UnmappedBehavior.from(unmappedBehavior);
     }
@@ -40,19 +39,9 @@ public class OssMenuPermissionMapper {
      */
     public Set<String> map(List<OssMenuTreeNode> menuTree) {
         Set<String> permissions = new HashSet<>();
-        if (menuTree == null || menuTree.isEmpty()) {
-            return permissions;
-        }
-        List<OssMenuTreeNode> stack = new ArrayList<>(menuTree);
-        while (!stack.isEmpty()) {
-            OssMenuTreeNode node = stack.removeLast();
-            if (node == null) {
-                continue;
-            }
-            mapNode(node).ifPresent(permissions::add);
-            if (node.children() != null && !node.children().isEmpty()) {
-                stack.addAll(node.children());
-            }
+        List<OssMenuTreeNode> nodes = OssMenuTreeNode.flatten(menuTree);
+        for (OssMenuTreeNode node : nodes) {
+            permissions.addAll(resolve(node.normalizedMenuCode()));
         }
         return Set.copyOf(permissions);
     }
@@ -66,7 +55,7 @@ public class OssMenuPermissionMapper {
     public Set<String> mapCodes(List<String> codes) {
         Set<String> permissions = new HashSet<>();
         if (codes == null || codes.isEmpty()) {
-            return permissions;
+            return Set.copyOf(permissions);
         }
         for (String code : codes) {
             if (code == null) {
@@ -76,42 +65,44 @@ public class OssMenuPermissionMapper {
             if (normalized.isBlank()) {
                 continue;
             }
-            String mapped = codeMappings.get(normalized);
-            if (mapped != null && !mapped.isBlank()) {
-                permissions.add(mapped.trim());
-            } else if (unmappedBehavior == UnmappedBehavior.USE_NORMALIZED_CODE) {
-                permissions.add(normalized);
-            }
+            permissions.addAll(resolve(normalized));
         }
         return Set.copyOf(permissions);
     }
 
-    private Optional<String> mapNode(OssMenuTreeNode node) {
-        String normalized = node.normalizedMenuCode();
-        if (normalized.isBlank()) {
-            return Optional.empty();
+    /**
+     * 将单个规范化后的 OSS 菜单码解析为内部权限码集合。
+     */
+    private Set<String> resolve(String normalizedCode) {
+        if (normalizedCode.isBlank()) {
+            return Set.of();
         }
-        String mapped = codeMappings.get(normalized);
-        if (mapped != null && !mapped.isBlank()) {
-            return Optional.of(mapped.trim());
+        List<String> mapped = codeMappings.get(normalizedCode);
+        if (mapped != null && !mapped.isEmpty()) {
+            return Set.copyOf(mapped);
         }
         if (unmappedBehavior == UnmappedBehavior.USE_NORMALIZED_CODE) {
-            return Optional.of(normalized);
+            return Set.of(normalizedCode);
         }
-        return Optional.empty();
+        return Set.of();
     }
 
-    private static Map<String, String> normalizeKeys(Map<String, String> mappings) {
+    private static Map<String, List<String>> normalizeKeys(Map<String, List<String>> mappings) {
         if (mappings == null) {
             return Map.of();
         }
-        Map<String, String> normalized = new java.util.HashMap<>();
-        mappings.forEach((key, value) -> {
-            if (key != null) {
-                normalized.put(key.trim().toLowerCase(Locale.ROOT), value == null ? "" : value.trim());
+        Map<String, List<String>> normalized = new HashMap<>();
+        mappings.forEach((key, values) -> {
+            if (key == null) {
+                return;
             }
+            List<String> cleaned = values == null ? List.of() : values.stream()
+                    .filter(v -> v != null && !v.isBlank())
+                    .map(String::trim)
+                    .toList();
+            normalized.put(key.trim().toLowerCase(Locale.ROOT), cleaned);
         });
-        return Map.copyOf(normalized);
+        return Collections.unmodifiableMap(normalized);
     }
 
     private enum UnmappedBehavior {
